2002-09-23  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas-util.c (sp_canvas_item_grab): new method to
	circumvent GnomeCanvas bug

	* src/knot.c (sp_knot_handler): Use sp_canvas_item_grab

2002-09-23  Masatake YAMATO  <jet@gyve.org>

	* src/knot.c (sp_knot_class_init): Added "stamped" signal
	(sp_knot_handler): Emit it

	* src/select-context.c (sp_select_context_item_handler): Do stamping
	(sp_select_context_root_handler): Ditto

	* src/seltrans.c (sp_sel_trans_stamp): new method
	(sp_show_handles): Connect "stamped" signal
	(sp_sel_trans_handle_stamp): new handler

2002-09-23  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/seltrans.c (sp_seltrans_handle_event): Just here for my debugging

	* src/knot.c (sp_knot_handler): No ungrabbing, added TOP CANVAS HACK,
	so we can now get key events and do not kill Gdk

	* configure.in: Version 0.27pre

2002-09-22  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Version 0.26

	* src/main.c: #include <locale.h>, thanks to Masatake

Sun Sep 22 22:21:14 2002  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-ruler.c: Bug fixed that
	misspelling s/GtkHRuler/SPHRuler/ and s/GtkVRuler/SPVRuler/.

2002-09-21  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/fill-style.c (sp_fill_style_widget_new): Fill rule selector
	(sp_fill_style_widget_update): Update fill rule selector
	(sp_fill_style_widget_update_repr): Ditto
	(sp_fill_style_widget_fill_rule_activate): Set fill-rule

	* src/document.c (sp_document_new): Do not set style

	* src/xml/repr.c (sp_repr_merge): Duplicate node without id key

	* src/sp-path.c (sp_path_build): Set fill to none for old version open path

	* src/bonobo/embeddable-document.c (sp_embeddable_document_pf_load): New
	document constructor signature, thanks to Ted Gould
	(sp_embeddable_document_ps_load): Ditto
	(sp_embeddable_document_new): Ditto

	* src/help.c (sp_help_about): use sp_text_set_repr_multiline

	* src/style.c (sp_style_write_difference): Rewind pointer
