@@ -525,6 +525,12 @@ sp_sel_trans_update_volatile_state (SPSelTrans * seltrans)
 	if (seltrans->empty) return;
 
 	sp_selection_bbox (SP_DT_SELECTION (seltrans->desktop), &seltrans->box);
+
+	seltrans->box.x0 -= 0.125;
+	seltrans->box.y0 -= 0.125;
+	seltrans->box.x1 += 0.125;
+	seltrans->box.y1 += 0.125;
+
 	art_affine_identity (seltrans->current);
 }
 
